Fix crash on opening template in words

The crash occurs due to tool options docker trying to access
widgets that's already been deleted. To avoid this I reset the
widgets in the tool options dialog when a new document is loaded.

REVIEW: 102242
BUG: 272410